--- a/merch/index.html
+++ b/merch/index.html
@@ -48,15 +48,15 @@
     <h3>Preview Lineup</h3>
     <div class="grid gallery">
       <figure class="card">
-        <img src="../assets/cover.jpg" alt="Placeholder hoodie" loading="lazy" onerror="this.style.display='none'">
+        <img src="../assets/cover.png" alt="Placeholder hoodie" loading="lazy" onerror="this.style.display='none'">
         <figcaption><strong>Wolf Hoodie</strong> — Cozy winter-wolf vibes</figcaption>
       </figure>
       <figure class="card">
-        <img src="../assets/cover.jpg" alt="Placeholder sticker pack" loading="lazy" onerror="this.style.display='none'">
+        <img src="../assets/cover.png" alt="Placeholder sticker pack" loading="lazy" onerror="this.style.display='none'">
         <figcaption><strong>Sticker Pack</strong> — Luna & emotes set</figcaption>
       </figure>
       <figure class="card">
-        <img src="../assets/cover.jpg" alt="Placeholder enamel pin" loading="lazy" onerror="this.style.display='none'">
+        <img src="../assets/cover.png" alt="Placeholder enamel pin" loading="lazy" onerror="this.style.display='none'">
         <figcaption><strong>Enamel Pin</strong> — Moonfang crest</figcaption>
       </figure>
     </div>
