--- a/stream/index.html
+++ b/stream/index.html
@@ -56,7 +56,7 @@
           <h4>Live Embed</h4>
           <div class="embed">
             <!-- Replace with your Twitch/YouTube embed -->
-            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Stream highlight" allowfullscreen></iframe>
+            <iframe src="https://www.twitch.tv/wolfpastryvt" title="Stream highlight" allowfullscreen></iframe>
           </div>
         </div>
       </div>
