--- a/stream/index.html
+++ b/stream/index.html
@@ -52,12 +52,15 @@
       <figcaption><strong>Who is Luna?</strong> — OC Model Info and Lore</figcaption>
     </figure>
   </a>
-        <div>
-          <h4>Live Embed</h4>
-          <div class="embed">
-            <!-- Replace with your Twitch/YouTube embed -->
-            <iframe src="https://www.twitch.tv/wolfpastryvt" title="Stream highlight" allowfullscreen></iframe>
-          </div>
+<div class="embed">
+     <!--Replace ?channel=WolfPastryVT with ?video=v1234567890&, where after = is the video id for trailer-->     
+  <iframe
+    src="https://player.twitch.tv/?channel=WolfPastryVT&parent=wolfpastrystudio.com&parent=wolfpastryvt.github.io&parent=localhost&muted=true&autoplay=true"
+    allowfullscreen
+    frameborder="0"
+    scrolling="no">
+  </iframe>
+</div>
         </div>
       </div>
     </section>
