--- a/commissions/index.html
+++ b/commissions/index.html
@@ -47,10 +47,10 @@
         <div>
           <h4>Pricing</h4>
           <ul class="pricing">
+            <li><strong>Illustrations:</strong> $XX+</li>
             <li><strong>Emotes:</strong> $XX each / $XX bundle</li>
-            <li><strong>Panels:</strong> $XX per set</li>
-            <li><strong>Character Illustration:</strong> $XX+</li>
-            <li><strong>Live2D Art (PSD):</strong> $XX+</li>
+            <li><strong>Stream Assets:</strong> $XX per set</li>
+            <li><strong>Other Services:</strong> $XX+</li>
           </ul>
           <p><em>Turnaround times</em> vary by scope and queue. See TOS below.</p>
           <details>
@@ -78,10 +78,10 @@
               Commission Type
               <select name="type" required>
                 <option value="">Choose one</option>
-                <option>Emote</option>
-                <option>Panels</option>
-                <option>Illustration</option>
-                <option>Live2D Art</option>
+                <option>Illustrations</option>
+                <option>Emotes</option>
+                <option>Stream Assets</option>
+                <option>Other Services</option>
               </select>
             </label>
             <label>
