--- a/contact/index.html
+++ b/contact/index.html
@@ -32,31 +32,41 @@
 <main>
   <section class="section">
     <h3>Contact</h3>
-    <p>Email: <a href="mailto:hello@wolfpastrystudio.com">hello@wolfpastrystudio.com</a></p>
-    <button type="button" class="btn secondary" onclick="openEmailModal()">Show email (copy/paste)</button>
+    <form class="form" onsubmit="return submitContact(this)">
+  <label>
+    Your Name
+    <input name="name" type="text" required placeholder="Your display name">
+  </label>
+
+  <label>
+    Email
+    <input name="email" type="email" required placeholder="you@example.com">
+  </label>
+
+  <label>
+    Reason
+    <select name="reason" required>
+      <option value="general" selected>General question</option>
+      <option value="commission">Commission</option>
+      <option value="merch">Merch</option>
+    </select>
+  </label>
+
+  <label>
+    Message
+    <textarea name="message" rows="5" placeholder="Ask away…"></textarea>
+  </label>
+
+  <button class="btn" type="submit">Send</button>
+  <p id="contactStatus" class="form-status" aria-live="polite"></p>
+</form>
+
   </section>
 </main>
 
 <footer class="site-footer">
   <p>© <span id="year"></span> WolfPastry Studio • All rights reserved.</p>
 </footer>
-
-<!-- Email copy modal -->
-<div id="emailModal" class="modal" hidden aria-hidden="true">
-  <div class="modal-backdrop" onclick="closeEmailModal()"></div>
-  <div class="modal-dialog" role="dialog" aria-modal="true" aria-labelledby="emailModalTitle">
-    <h4 id="emailModalTitle">Contact email</h4>
-    <p>Copy this address and paste it into your mail app or webmail.</p>
-    <div class="copy-row">
-      <input id="emailToCopy" type="text" value="hello@wolfpastrystudio.com" readonly />
-      <button class="btn" type="button" onclick="copyEmailFromModal()">Copy</button>
-    </div>
-    <p id="copyStatus" class="note" aria-live="polite"></p>
-    <div class="modal-actions">
-      <button class="btn secondary" type="button" onclick="closeEmailModal()">Close</button>
-    </div>
-  </div>
-</div>
 
 <script src="../script.js"></script>
 </body>
