--- a/merch/index.html
+++ b/merch/index.html
@@ -40,19 +40,23 @@
         <a class="btn" href="/contact/">Get notified</a>
         <a class="btn secondary" href="/">Back to Home</a>
       </div>
-      <form class="form" onsubmit="return submitMerch(this)">
-  <label>
-    Your Email
-    <input name="email" type="email" required placeholder="you@example.com">
-  </label>
-  <label>
-    What are you interested in?
-    <input name="interest" type="text" placeholder="Hoodie / Stickers / Pins…">
-  </label>
-  <button class="btn" type="submit">Notify Me</button>
-  <p id="merchStatus" class="form-status" aria-live="polite"></p>
-</form>
+    </div>
+  </section>
 
+  <section>
+    <div class="hero-inner">
+      <form class="form" onsubmit="return submitMerch(this)">
+        <label>
+        Your Email
+          <input name="email" type="email" required placeholder="you@example.com">
+        </label>
+        <label>
+         What are you interested in?
+          <input name="interest" type="text" placeholder="Hoodie / Stickers / Pins…">
+        </label>
+           <button class="btn" type="submit">Notify Me</button>
+        <p id="merchStatus" class="form-status" aria-live="polite"></p>
+      </form>
     </div>
   </section>
 
