--- a/merch/index.html
+++ b/merch/index.html
@@ -37,14 +37,13 @@
       <h2>Merch — Coming Soon</h2>
       <p>Hoodies, stickers, pins, and more. Check back soon or follow my socials!</p>
       <div class="cta-group">
-        <a class="btn" href="/contact/">Get notified</a>
         <a class="btn secondary" href="/">Back to Home</a>
       </div>
     </div>
   </section>
 
   <section>
-    <div class="hero-inner">
+    <div>
       <form class="form" onsubmit="return submitMerch(this)">
         <label>
         Your Email
@@ -54,7 +53,7 @@
          What are you interested in?
           <input name="interest" type="text" placeholder="Hoodie / Stickers / Pins…">
         </label>
-           <button class="btn" type="submit">Notify Me</button>
+           <button class="btn" type="submit">Get notified</button>
         <p id="merchStatus" class="form-status" aria-live="polite"></p>
       </form>
     </div>
