--- a/commissions/index.html
+++ b/commissions/index.html
@@ -63,6 +63,64 @@
             </ul>
           </details>
         </div>
+        <div>
+          <h4>Request a Commission</h4>
+          <form action="https://api.web3forms.com/submit" method="POST" class="form">
+  <!-- Required -->
+  <input type="hidden" name="access_key" value="c77f04c8-c6f1-44ee-b4d1-7c0a3c0b0357">
+  <input type="hidden" name="from_name" value="WolfPastry Studio Site">
+  <input type="hidden" name="subject" value="[Commission] New request">
+  <input type="hidden" name="redirect" value="https://wolfpastrystudio.com/thanks/">
+  <!-- Honeypot -->
+  <input type="checkbox" name="botcheck" class="hidden" style="display:none !important" tabindex="-1" autocomplete="off">
+
+  <label>
+    Your Name
+    <input required name="name" type="text" placeholder="Your display name">
+  </label>
+
+  <label>
+    Email
+    <input required name="email" type="email" placeholder="you@example.com">
+  </label>
+
+  <label>
+    Commission Type
+    <select name="type" required>
+      <option value="">Choose one</option>
+      <option>Illustrations</option>
+      <option>Emotes</option>
+      <option>Stream Assets</option>
+      <option>Other Services</option>
+    </select>
+  </label>
+
+  <label>
+    Budget (optional)
+    <input name="budget" type="text" placeholder="$…">
+  </label>
+
+  <label>
+    Deadline (optional)
+    <input name="deadline" type="date">
+  </label>
+
+  <label>
+    References / Links
+    <input name="references" type="url" placeholder="https://… (paste a link to refs, drive folder, etc.)">
+  </label>
+
+  <label>
+    Details
+    <textarea name="details" rows="5" placeholder="Describe your request and include any specifics."></textarea>
+  </label>
+
+  <button class="btn" type="submit">Send Request</button>
+  <p class="form-status" id="formStatus" aria-live="polite"></p>
+</form>
+<p class="note" style="margin-top:8px;">You’ll receive a confirmation in your inbox. I usually reply in 1–3 business days.</p>
+
+        </div>
       </div>
     </div>
   </div>
