--- a/merch/index.html
+++ b/merch/index.html
@@ -44,18 +44,30 @@
 
   <section>
     <div>
-      <form class="form" onsubmit="return submitMerch(this)">
-        <label>
-        Your Email
-          <input name="email" type="email" required placeholder="you@example.com">
-        </label>
-        <label>
-         What are you interested in?
-          <input name="interest" type="text" placeholder="Hoodie / Stickers / Pins…">
-        </label>
-           <button class="btn" type="submit">Get notified</button>
-        <p id="merchStatus" class="form-status" aria-live="polite"></p>
-      </form>
+      <form action="https://api.web3forms.com/submit" method="POST" class="form">
+  <!-- Required -->
+  <input type="hidden" name="access_key" value="c77f04c8-c6f1-44ee-b4d1-7c0a3c0b0357">
+  <input type="hidden" name="from_name" value="WolfPastry Studio Site">
+  <input type="hidden" name="subject" value="[Merch Interest] New signup">
+  <input type="hidden" name="redirect" value="https://wolfpastrystudio.com/thanks/">
+  <!-- Honeypot -->
+  <input type="checkbox" name="botcheck" class="hidden" style="display:none !important" tabindex="-1" autocomplete="off">
+
+  <label>
+    Your Email
+    <input name="email" type="email" required placeholder="you@example.com">
+  </label>
+
+  <label>
+    What are you interested in?
+    <input name="interest" type="text" placeholder="Hoodie / Stickers / Pins…">
+  </label>
+
+  <button class="btn" type="submit">Notify Me</button>
+  <p id="merchStatus" class="form-status" aria-live="polite"></p>
+</form>
+<p class="note" style="margin-top:8px;">I’ll email when a drop goes live. You can unsubscribe anytime by replying.</p>
+
     </div>
   </section>
 
