--- a/merch/index.html
+++ b/merch/index.html
@@ -42,7 +42,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="section">
     <div>
       <form action="https://api.web3forms.com/submit" method="POST" class="form">
   <!-- Required -->
