--- a/stream/index.html
+++ b/stream/index.html
@@ -39,28 +39,32 @@
             <li>Tue · 8 PM ET — Cozy art stream</li>
             <li>Fri · 9 PM ET — Game night</li>
           </ul>
+        
+           <a class="card" href="/stream/model/" style="display:block; padding:0; text-decoration:none; margin-top:16px;">
+            <figure>
+              <img src="/assets/cover.jpg" alt="Who is Luna?" loading="lazy" onerror="this.style.display='none'">
+              <figcaption><strong>Who is Luna?</strong> — OC Model Info and Lore</figcaption>
+            </figure>
+          </a>
         </div>
-  <a class="card" href="/stream/community/" style="text-decoration:none;">
-    <figure>
-      <img src="/assets/cover.png" alt="Community" loading="lazy" onerror="this.style.display='none'">
-      <figcaption><strong>Community</strong> — Discord, shout-outs, and where I mod</figcaption>
-    </figure>
-  </a>
-  <a class="card" href="/stream/model/" style="text-decoration:none;">
-    <figure>
-      <img src="/assets/cover.png" alt="Model" loading="lazy" onerror="this.style.display='none'">
-      <figcaption><strong>Who is Luna?</strong> — OC Model Info and Lore</figcaption>
-    </figure>
-  </a>
-<div class="embed">
-     <!--Replace ?channel=WolfPastryVT with ?video=v1234567890&, where after = is the video id for trailer-->     
-  <iframe
-    src="https://player.twitch.tv/?channel=WolfPastryVT&parent=wolfpastrystudio.com&parent=wolfpastryvt.github.io&parent=localhost&muted=true&autoplay=true"
-    allowfullscreen
-    frameborder="0"
-    scrolling="no">
-  </iframe>
-</div>
+        <div>
+          <a class="card" href="/stream/community/" style="display:block; padding:0; text-decoration:none;">
+            <figure>
+              <img src="/assets/cover.jpg" alt="Community" loading="lazy" onerror="this.style.display='none'">
+              <figcaption><strong>Community</strong> — Discord, shout-outs, and where I mod</figcaption>
+            </figure>
+          </a>
+          <div class="card" style="padding:12px; margin-top:16px;">
+            <div class="embed">
+            <!--Replace ?channel=WolfPastryVT with ?video=v1234567890&, where after = is the video id for trailer-->     
+            <iframe
+                src="https://player.twitch.tv/?channel=WolfPastryVT&parent=wolfpastrystudio.com&parent=wolfpastryvt.github.io&parent=localhost&muted=true&autoplay=true"
+                allowfullscreen
+                frameborder="0"
+                scrolling="no">
+              </iframe>
+            </div>
+          </div>
         </div>
       </div>
     </section>
