--- a/stream/index.html
+++ b/stream/index.html
@@ -42,7 +42,7 @@
         
            <a class="card" href="/stream/model/" style="display:block; padding:0; text-decoration:none; margin-top:16px;">
             <figure>
-              <img src="/assets/cover.jpg" alt="Who is Luna?" loading="lazy" onerror="this.style.display='none'">
+              <img src="/assets/cover.png" alt="Who is Luna?" loading="lazy" onerror="this.style.display='none'">
               <figcaption><strong>Who is Luna?</strong> — OC Model Info and Lore</figcaption>
             </figure>
           </a>
@@ -50,7 +50,7 @@
         <div>
           <a class="card" href="/stream/community/" style="display:block; padding:0; text-decoration:none;">
             <figure>
-              <img src="/assets/cover.jpg" alt="Community" loading="lazy" onerror="this.style.display='none'">
+              <img src="/assets/cover.png" alt="Community" loading="lazy" onerror="this.style.display='none'">
               <figcaption><strong>Community</strong> — Discord, shout-outs, and where I mod</figcaption>
             </figure>
           </a>
