--- a/stream/index.html
+++ b/stream/index.html
@@ -30,7 +30,16 @@
 </header>
 
 <main>
-<section class="section">
+<div class="section-wrap">
+    <!-- LEFT: sidebar -->
+    <aside class="section-nav" aria-label="Stream">
+      <h4>Stream</h4>
+      <a href="/stream/">Overview</a>
+      <a href="/stream/community/">Community</a>
+      <a href="/stream/model/">Who is Luna?</a>
+    </aside>
+  
+  <div>
       <h3>Stream Hub</h3>
       <div class="grid two">
         <div>
@@ -46,28 +55,29 @@
               <figcaption><strong>Who is Luna?</strong> — OC Model Info and Lore</figcaption>
             </figure>
           </a>
-        </div>
-        <div>
-          <a class="card" href="/stream/community/" style="display:block; padding:0; text-decoration:none;">
-            <figure>
-              <img src="/assets/cover.png" alt="Community" loading="lazy" onerror="this.style.display='none'">
-              <figcaption><strong>Community</strong> — Discord, shout-outs, and where I mod</figcaption>
-            </figure>
-          </a>
-          <div class="card" style="padding:12px; margin-top:16px;">
-            <div class="embed">
+         </div>
+         <div>
+         <a class="card" href="/stream/community/" style="display:block; padding:0; text-decoration:none;">
+           <figure>
+            <img src="/assets/cover.png" alt="Community" loading="lazy" onerror="this.style.display='none'">
+            <figcaption><strong>Community</strong> — Discord, shout-outs, and where I mod</figcaption>
+          </figure>
+         </a>
+         <div class="card" style="padding:12px; margin-top:16px;">
+           <div class="embed">
             <!--Replace ?channel=WolfPastryVT with ?video=v1234567890&, where after = is the video id for trailer-->     
             <iframe
-                src="https://player.twitch.tv/?channel=WolfPastryVT&parent=wolfpastrystudio.com&parent=wolfpastryvt.github.io&parent=localhost&muted=true&autoplay=true"
-                allowfullscreen
-                frameborder="0"
-                scrolling="no">
-              </iframe>
-            </div>
-          </div>
-        </div>
+              src="https://player.twitch.tv/?channel=WolfPastryVT&parent=wolfpastrystudio.com&parent=wolfpastryvt.github.io&parent=localhost&muted=true&autoplay=true"
+              allowfullscreen
+              frameborder="0"
+              scrolling="no">
+            </iframe>
+           </div>
+         </div>
+       </div>
       </div>
-    </section>
+     </div>
+  </div>
 </main>
 
 <footer class="site-footer">
