--- a/merch/index.html
+++ b/merch/index.html
@@ -72,23 +72,38 @@
 
   <!-- Placeholder grid (you can replace these cards later) -->
   <section class="section">
-    <h3>Preview Lineup</h3>
-    <div class="grid gallery">
-      <figure class="card">
-        <img src="../assets/cover.png" alt="Placeholder hoodie" loading="lazy" onerror="this.style.display='none'">
-        <figcaption><strong>Wolf Hoodie</strong> — Cozy winter-wolf vibes</figcaption>
+  <h3>Store</h3>
+  <div class="grid gallery">
+
+    <!-- Product card -->
+    <article class="card">
+      <figure>
+        <img src="/assets/cover.png" alt="Wolf Hoodie (Blue)" loading="lazy">
+        <figcaption><strong>Wolf Hoodie — Blue</strong><br><small>Unisex S–XXL</small></figcaption>
       </figure>
-      <figure class="card">
-        <img src="../assets/cover.png" alt="Placeholder sticker pack" loading="lazy" onerror="this.style.display='none'">
-        <figcaption><strong>Sticker Pack</strong> — Luna & emotes set</figcaption>
+      <div class="cta-group" style="padding:12px;">
+        <!-- Example: Stripe Payment Link -->
+        <a class="btn" href="https://ko-fi.com/wolfpastryvt"
+           target="_blank" rel="noopener">Buy now</a>
+        <a class="btn secondary" href="https://ko-fi.com/wolfpastryvt"
+           target="_blank" rel="noopener">View on Ko-fi</a>
+      </div>
+      <p class="note" style="padding:0 12px 12px;">Printed on demand. Ships in ~7–10 business days.</p>
+    </article>
+
+    <article class="card">
+      <figure>
+        <img src="/assets/cover.png" alt="Sticker Pack" loading="lazy">
+        <figcaption><strong>Sticker Pack</strong><br><small>Matte vinyl • 5 designs</small></figcaption>
       </figure>
-      <figure class="card">
-        <img src="../assets/cover.png" alt="Placeholder enamel pin" loading="lazy" onerror="this.style.display='none'">
-        <figcaption><strong>Enamel Pin</strong> — Moonfang crest</figcaption>
-      </figure>
-    </div>
-    <p class="note" style="margin-top:10px;">Tip: Replace images later with files in <code>assets/merch/</code> and update the <code>src</code> paths.</p>
-  </section>
+      <div class="cta-group" style="padding:12px;">
+        <button class="btn" disabled>Coming soon</button>
+        <a class="btn secondary" href="/merch/" aria-disabled="true">Details</a>
+      </div>
+    </article>
+
+  </div>
+</section>
 </main>
 
 <footer class="site-footer">
