--- a/commissions/index.html
+++ b/commissions/index.html
@@ -56,7 +56,83 @@
           <details>
             <summary>Terms of Service</summary>
             <ul>
-              <li>No refunds after sketch approval.</li>
+     <!--         GENERAL
+✧ Please be sure you want to commission me before contacting
+
+
+✧What I will do
+- Mythological Creatures
+- Kemonoimi
+- Nekomimi
+- Fantasy Characters
+- OC
+- Fanart
+
+
+✧What I won't do
+- NSFW Content
+- Gore
+
+
+PAYMENTS
+✧ Client is expected to pay up front prior to the commission starting
+✧ At any time, you may cancel your commission prior to making payments
+✧ Commission will not precede until payment is given
+
+
+REVISIONS
+✧ No revisions will be made for any and all YCH Commissions
+✧ You can make changes to the commission in the sketch phase
+✧ I will share each phase with my clients(Sketch, Lineart, and Flat Color)
+
+
+DEADLINES AND DELIVERY
+✧ Estimated delivery is 1 month max(once started). I will inform the client when the commission has started with the date of the deadline
+✧ If I am unable to complete the commission by the deadline the client has an option of choosing to wait an additional amount of time or request a refund
+
+
+USE
+✧ Do not take credit for my work or remove watermark/signature
+✧ You must credit the Artist! See below for credits:
+- Instagram: @wolf.pastryvt
+- Twitter: @wolf_pastry
+- Bluesky: @wolfpastryVT@bsky.social
+- Twitch: @WolfPastryVT
+- TikTok: @wolfpastryyt
+- YouTube: @WolfPastryVT
+
+
+✧ You can use the commissioned work for personal use, streaming, and content creation
+✧ You may not use the work for merch or other commercial purposes unless discussed with me
+
+
+INTELLECTUAL PROPERTY RIGHTS
+✧ I, the artist, retain all rights over my artwork and I have the ability to showcase and post the commissioned work on any/all of the following:
+- My Portfolio
+- My Websites
+- Social Media 
+
+
+REFUNDS
+✧ Refunds will be accepted ONLY if:
+- The commission has not yet been started
+- The commission is in the sketch phase
+- The client requests a refund if the commissioned piece is not done by the deadline
+
+
+
+
+COMMUNICATION
+✧ Client has a choice with communication in regards to where they feel the most comfortable. Do indicate which option is better suited for you, or if you don't have a preference indicate that as well. The following listed below are the options:
+- VGen
+- Discord DMs
+- Twitter DMs
+-->
+              <li><strong>REVISIONS</strong></li>
+              <li>✧ No revisions will be made for any and all YCH Commissions</li>
+              <li>✧ You can make changes to the commission in the sketch phase</li>
+              <li>✧ I will share each phase with my clients(Sketch, Lineart, and Flat Color)</li>
+              
               <li>Commercial use/licensing available.</li>
               <li>Credit "WolfPastry Studio" when used publicly.</li>
               <li>Contact for rush orders.</li>
