--- a/commissions/index.html
+++ b/commissions/index.html
@@ -128,7 +128,7 @@ COMMUNICATION
 - Discord DMs
 - Twitter DMs
 -->
-              <li><strong>REVISIONS</strong></li>
+              <strong>REVISIONS</strong>
               <li>✧ No revisions will be made for any and all YCH Commissions</li>
               <li>✧ You can make changes to the commission in the sketch phase</li>
               <li>✧ I will share each phase with my clients(Sketch, Lineart, and Flat Color)</li>
