--- a/commissions/index.html
+++ b/commissions/index.html
@@ -59,7 +59,6 @@
      <!--         GENERAL
 ✧ Please be sure you want to commission me before contacting
 
-
 ✧What I will do
 - Mythological Creatures
 - Kemonoimi
@@ -72,69 +71,54 @@
 ✧What I won't do
 - NSFW Content
 - Gore
-
-
-PAYMENTS
-✧ Client is expected to pay up front prior to the commission starting
-✧ At any time, you may cancel your commission prior to making payments
-✧ Commission will not precede until payment is given
-
-
-REVISIONS
-✧ No revisions will be made for any and all YCH Commissions
-✧ You can make changes to the commission in the sketch phase
-✧ I will share each phase with my clients(Sketch, Lineart, and Flat Color)
-
-
-DEADLINES AND DELIVERY
-✧ Estimated delivery is 1 month max(once started). I will inform the client when the commission has started with the date of the deadline
-✧ If I am unable to complete the commission by the deadline the client has an option of choosing to wait an additional amount of time or request a refund
-
-
-USE
-✧ Do not take credit for my work or remove watermark/signature
-✧ You must credit the Artist! See below for credits:
-- Instagram: @wolf.pastryvt
-- Twitter: @wolf_pastry
-- Bluesky: @wolfpastryVT@bsky.social
-- Twitch: @WolfPastryVT
-- TikTok: @wolfpastryyt
-- YouTube: @WolfPastryVT
-
-
-✧ You can use the commissioned work for personal use, streaming, and content creation
-✧ You may not use the work for merch or other commercial purposes unless discussed with me
-
-
-INTELLECTUAL PROPERTY RIGHTS
-✧ I, the artist, retain all rights over my artwork and I have the ability to showcase and post the commissioned work on any/all of the following:
-- My Portfolio
-- My Websites
-- Social Media 
-
-
-REFUNDS
-✧ Refunds will be accepted ONLY if:
-- The commission has not yet been started
-- The commission is in the sketch phase
-- The client requests a refund if the commissioned piece is not done by the deadline
-
-
-
-
-COMMUNICATION
-✧ Client has a choice with communication in regards to where they feel the most comfortable. Do indicate which option is better suited for you, or if you don't have a preference indicate that as well. The following listed below are the options:
-- VGen
-- Discord DMs
-- Twitter DMs
 -->
-              <strong>REVISIONS</strong>
-              <li>✧ No revisions will be made for any and all YCH Commissions</li>
-              <li>✧ You can make changes to the commission in the sketch phase</li>
-              <li>✧ I will share each phase with my clients(Sketch, Lineart, and Flat Color)</li>
+              <strong>PAYMENTS</strong>
+              <li>Client is expected to pay up front prior to the commission starting</li>
+              <li>At any time, you may cancel your commission prior to making payments</li>
+              <li>Commission will not precede until payment is given</li>
               
+              <strong>REVISIONS</strong>
+              <li>No revisions will be made for any and all YCH Commissions</li>
+              <li>You can make changes to the commission in the sketch phase</li>
+              <li>I will share each phase with my clients(Sketch, Lineart, and Flat Color)</li>
+
+              <strong>DEADLINES AND DELIVERY</strong>
+              <li>Estimated delivery is 1 month max(once started). I will inform the client when the commission has started with the date of the deadline</li>
+              <li>If I am unable to complete the commission by the deadline the client has an option of choosing to wait an additional amount of time or request a refund</li>
+
+              <strong>USE</strong>
+              <li>Do not take credit for my work or remove watermark/signature</li>
+              <ul>Credit "WolfPastry Studio" when used publicly. See below for other credits:
+                <li>Instagram: @wolf.pastryvt</li>
+                <li>Twitter: @wolf_pastry</li>
+                <li>Bluesky: @wolfpastryVT@bsky.social</li>
+                <li>Twitch: @WolfPastryVT</li>
+                <li>TikTok: @wolfpastryyt</li>
+                <li>YouTube: @WolfPastryVT</li>
+              </ul>
               <li>Commercial use/licensing available.</li>
-              <li>Credit "WolfPastry Studio" when used publicly.</li>
+              
+              <strong>INTELLECTUAL PROPERTY RIGHTS</strong>
+              <ul>I, the artist, retain all rights over my artwork and I have the ability to showcase and post the commissioned work on any/all of the following:
+                <li>My Portfolio</li>
+                <li>My Websites</li>
+                <li>Social Media</li>
+              </ul>
+
+              <strong>REFUNDS</strong>
+              <ul>Refunds will be accepted ONLY if:
+                <li>The commission has not yet been started</li>
+                <li>The commission is in the sketch phase</li>
+                <li>The client requests a refund if the commissioned piece is not done by the deadline</li>
+              </ul>
+
+              <strong>COMMUNICATION</strong>
+              <ul>Client has a choice with communication in regards to where they feel the most comfortable. Do indicate which option is better suited for you, or if you don't have a preference indicate that as well. The following listed below are the options:
+                <li>VGen</li>
+                <li>Email</li>
+                <li>Discord DMs</li>
+                <li>Twitter DMs</li>
+              </ul>
               <li>Contact for rush orders.</li>
             </ul>
           </details>
