--- a/commissions/index.html
+++ b/commissions/index.html
@@ -56,70 +56,76 @@
           <details>
             <summary>Terms of Service</summary>
             <ul>
-     <!--         GENERAL
-✧ Please be sure you want to commission me before contacting
-
-✧What I will do
-- Mythological Creatures
-- Kemonoimi
-- Nekomimi
-- Fantasy Characters
-- OC
-- Fanart
-
-
-✧What I won't do
-- NSFW Content
-- Gore
--->
+              <strong>GENERAL</strong>
+                <li>Please be sure you want to commission me before contacting</li>
+                <li>What I will do</li>
+                <ul>
+                  <li>Mythological Creatures</li>
+                  <li>Kemonoimi</li>
+                  <li>Nekomimi</li>
+                  <li>Fantasy Characters</li>
+                  <li>OC</li>
+                  <li>Fanart</li>
+                </ul>
+                <hr>
+                <li>What I won't do</li>
+                <ul>
+                  <li>NSFW Content</li>
+                  <li>Gore</li>
+                </ul>
+                <hr>
               <strong>PAYMENTS</strong>
-              <li>Client is expected to pay up front prior to the commission starting</li>
-              <li>At any time, you may cancel your commission prior to making payments</li>
-              <li>Commission will not precede until payment is given</li>
-              
+                <li>Client is expected to pay up front prior to the commission starting</li>
+                <li>At any time, you may cancel your commission prior to making payments</li>
+                <li>Commission will not precede until payment is given</li>
+                <hr>
               <strong>REVISIONS</strong>
-              <li>No revisions will be made for any and all YCH Commissions</li>
-              <li>You can make changes to the commission in the sketch phase</li>
-              <li>I will share each phase with my clients(Sketch, Lineart, and Flat Color)</li>
-
+                <li>No revisions will be made for any and all YCH Commissions</li>
+                <li>You can make changes to the commission in the sketch phase</li>
+                <li>I will share each phase with my clients(Sketch, Lineart, and Flat Color)</li>
+                <hr>
               <strong>DEADLINES AND DELIVERY</strong>
-              <li>Estimated delivery is 1 month max(once started). I will inform the client when the commission has started with the date of the deadline</li>
-              <li>If I am unable to complete the commission by the deadline the client has an option of choosing to wait an additional amount of time or request a refund</li>
-
+                <li>Estimated delivery is 1 month max(once started). I will inform the client when the commission has started with the date of the deadline</li>
+                <li>If I am unable to complete the commission by the deadline the client has an option of choosing to wait an additional amount of time or request a refund</li>
+                <hr>
               <strong>USE</strong>
-              <li>Do not take credit for my work or remove watermark/signature</li>
-              <ul>Credit "WolfPastry Studio" when used publicly. See below for other credits:
-                <li>Instagram: @wolf.pastryvt</li>
-                <li>Twitter: @wolf_pastry</li>
-                <li>Bluesky: @wolfpastryVT@bsky.social</li>
-                <li>Twitch: @WolfPastryVT</li>
-                <li>TikTok: @wolfpastryyt</li>
-                <li>YouTube: @WolfPastryVT</li>
-              </ul>
-              <li>Commercial use/licensing available.</li>
-              
+                <li>Do not take credit for my work or remove watermark/signature</li>
+                <li>Credit "WolfPastry Studio" when used publicly. See below for other credits:</li>
+                <ul>
+                  <li>Instagram: @wolf.pastryvt</li>
+                  <li>Twitter: @wolf_pastry</li>
+                  <li>Bluesky: @wolfpastryVT@bsky.social</li>
+                  <li>Twitch: @WolfPastryVT</li>
+                  <li>TikTok: @wolfpastryyt</li>
+                  <li>YouTube: @WolfPastryVT</li>
+                </ul>
+                <li>Commercial use/licensing available.</li>
+                <hr>
               <strong>INTELLECTUAL PROPERTY RIGHTS</strong>
-              <ul>I, the artist, retain all rights over my artwork and I have the ability to showcase and post the commissioned work on any/all of the following:
-                <li>My Portfolio</li>
-                <li>My Websites</li>
-                <li>Social Media</li>
-              </ul>
-
+                <li>I, the artist, retain all rights over my artwork and I have the ability to showcase and post the commissioned work on any/all of the following:</li>
+                <ul>
+                  <li>My Portfolio</li>
+                  <li>My Websites</li>
+                  <li>Social Media</li>
+                </ul>
+                <hr>
               <strong>REFUNDS</strong>
-              <ul>Refunds will be accepted ONLY if:
-                <li>The commission has not yet been started</li>
-                <li>The commission is in the sketch phase</li>
-                <li>The client requests a refund if the commissioned piece is not done by the deadline</li>
-              </ul>
-
+                <li>Refunds will be accepted ONLY if:</li>
+                <ul>
+                  <li>The commission has not yet been started</li>
+                  <li>The commission is in the sketch phase</li>
+                  <li>The client requests a refund if the commissioned piece is not done by the deadline</li>
+                </ul>
+              <hr>
               <strong>COMMUNICATION</strong>
-              <ul>Client has a choice with communication in regards to where they feel the most comfortable. Do indicate which option is better suited for you, or if you don't have a preference indicate that as well. The following listed below are the options:
-                <li>VGen</li>
-                <li>Email</li>
-                <li>Discord DMs</li>
-                <li>Twitter DMs</li>
-              </ul>
-              <li>Contact for rush orders.</li>
+                <li>Client has a choice with communication in regards to where they feel the most comfortable. Do indicate which option is better suited for you, or if you don't have a preference indicate that as well. The following listed below are the options:</li>
+                <ul>
+                  <li>VGen</li>
+                  <li>Email</li>
+                  <li>Discord DMs</li>
+                  <li>Twitter DMs</li>
+                </ul>
+                <li>Contact for rush orders.</li>
             </ul>
           </details>
         </div>
