--- a/commissions/index.html
+++ b/commissions/index.html
@@ -47,10 +47,10 @@
         <div>
           <h4>Pricing</h4>
           <ul class="pricing">
-            <li><strong>Illustrations:</strong> $XX+</li>
-            <li><strong>Emotes:</strong> $XX each / $XX bundle</li>
-            <li><strong>Stream Assets:</strong> $XX per set</li>
-            <li><strong>Other Services:</strong> $XX+</li>
+            <li><strong>Illustrations:</strong> $25+</li>
+            <li><strong>Emotes:</strong> $15+</li>
+            <li><strong>Stream Assets:</strong> $10+</li>
+            <li><strong>Other Services:</strong> $10+</li>
           </ul>
           <p><em>Turnaround times</em> vary by scope and queue. See TOS below.</p>
           <details>
