--- a/commissions/illustrations/index.html
+++ b/commissions/illustrations/index.html
@@ -46,7 +46,7 @@
         <li><strong>Bust Up:</strong> $25</li>
         <li><strong>Half Body:</strong> $40</li>
         <li><strong>Full Body:</strong> $50</li>
-        <li><em>Add-ons:</em> extra outfit +$10, detailed bg +$5, extra character +$10</li>
+        <li><em>Add-ons:</em> extra character +$10, detailed bg +$5, illust.->pngtuber +$15, illust.->reactive img +$10, extra outfit +$10, extra hair options +$10, extra accessories +$10</li>
       </ul>
 
       <div class="cta-group" style="margin-top:10px;">
