--- a/commissions/miscellaneous/index.html
+++ b/commissions/miscellaneous/index.html
@@ -50,7 +50,7 @@
       </ul>
 
       <div class="cta-group" style="margin-top:10px;">
-        <a class="btn" href="https://forms.gle/your-form" target="_blank" rel="noopener">Request Other Services</a>
+        <a class="btn" href="https://wolfpastrystudio.com/commissions/" target="_blank" rel="noopener">Request Other Services</a>
         <a class="btn secondary" href="https://trello.com/b/S2ZR06cE/wolfs-commissions" target="_blank" rel="noopener">Queue</a>
       </div>
 
