--- a/commissions/emotes/index.html
+++ b/commissions/emotes/index.html
@@ -43,10 +43,10 @@
     <div>
       <h3>Emote Commissions</h3>
       <ul class="pricing">
-        <li><strong>Bust Up:</strong> $25</li>
-        <li><strong>Half Body:</strong> $40</li>
-        <li><strong>Full Body:</strong> $50</li>
-        <li><em>Add-ons:</em> extra outfit +$10, detailed bg +$5, extra character +$10</li>
+        <li><strong>Static:</strong> $15</li>
+        <li><strong>Animated:</strong> $25</li>
+        <li><strong>YCH:</strong> $15</li>
+        <li><em>Add-ons:</em> extra accessory(Only for YCH) +$5, seperate PNG files(Only for YCH) +$5, extra character +$10</li>
       </ul>
 
       <div class="cta-group" style="margin-top:10px;">
@@ -54,11 +54,25 @@
         <a class="btn secondary" href="https://trello.com/b/S2ZR06cE/wolfs-commissions" target="_blank" rel="noopener">Queue</a>
       </div>
 
-      <h4 style="margin-top:20px;">Examples</h4>
+      <h4 style="margin-top:20px;">Static Examples</h4>
       <div class="grid gallery">
         <figure class="card">
-          <img src="../../assets/sample1.png" alt="Emotes example 1" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Emote commission</figcaption>
+          <figcaption>Not Applicable Yet</figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">Animated Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <figcaption>Not Applicable Yet</figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">Ych Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <img src="../../assets/YCH1.gif" alt="Emote example 1" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Emote commission for <a href="https://x.com/ValidantesVT">ValidantesVT</a></figcaption>
         </figure>
       </div>
 
