--- a/commissions/emotes/index.html
+++ b/commissions/emotes/index.html
@@ -68,7 +68,7 @@
         </figure>
       </div>
 
-      <h4 style="margin-top:20px;">Ych Examples</h4>
+      <h4 style="margin-top:20px;">YCH Examples</h4>
       <div class="grid gallery">
         <figure class="card">
           <img src="../../assets/YCH1.gif" alt="Emote example 1" loading="lazy" onerror="this.style.display='none'">
@@ -79,9 +79,8 @@
       <details style="margin-top:14px;">
         <summary>Terms for Emotes</summary>
         <ul>
-          <li>Personal use allowed; commercial/licensing by agreement.</li>
-          <li>Typical delivery ~1 month from start.</li>
-          <li>Revisions: sketch approval + 1 minor pass after color.</li>
+          <li>TOS holds from <a href="https://wolfpastrystudio.com/commissions/">Overview</a></li>
+          <li>Human based OC's will be turned into a cat for YCH bongo's unless specified otherwise</li>
         </ul>
       </details>
     </div>
