--- a/commissions/illustrations/index.html
+++ b/commissions/illustrations/index.html
@@ -46,7 +46,8 @@
         <li><strong>Bust Up:</strong> $25</li>
         <li><strong>Half Body:</strong> $40</li>
         <li><strong>Full Body:</strong> $50</li>
-        <li><em>Add-ons:</em> extra character +$10, detailed bg +$5, illust.->pngtuber +$15, illust.->reactive img +$10, extra outfit +$10, extra hair options +$10, extra accessories +$10</li>
+        <li><strong>YCH:</strong> $10+</li>
+        <li><em>Add-ons:</em> extra character +$10, detailed bg +$5, illust.->pngtuber +$15, illust.->reactive img +$10, extra outfit +$10, extra hair options +$10, extra accessories +$10, animated(Only for YCH options) +$5</li>
       </ul>
 
       <div class="cta-group" style="margin-top:10px;">
@@ -54,20 +55,48 @@
         <a class="btn secondary" href="https://trello.com/b/S2ZR06cE/wolfs-commissions" target="_blank" rel="noopener">Queue</a>
       </div>
 
-      <h4 style="margin-top:20px;">Examples</h4>
+      <h4 style="margin-top:20px;">Bust Up Examples</h4>
       <div class="grid gallery">
         <figure class="card">
-          <img src="../../assets/sample1.png" alt="Illustration example 1" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Full body commission</figcaption>
+          <img src="../../assets/BU1.gif" alt="Bust Up example 1 with PNGTuber add-on" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Emote commission for <a href="https://www.youtube.com/@VirtuallyFoxed/">VirtuallyFoxed</a></figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">Half Body Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <figcaption>Not Applicable Yet</figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">Full Body Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <figcaption>Not Applicable Yet</figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">YCH Mascot Long Boi Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <img src="../../assets/MLB1.png" alt="YCH Mascot Long Boi example 1" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Emote commission for <a href="https://x.com/Felgrand_TV">FelgrandTheDragon</a></figcaption>
+        </figure>
+        <figure class="card">
+          <img src="../../assets/MLB2.png" alt="YCH Mascot Long Boi example 2" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Emote commission for <a href="https://x.com/splattermau5">Splattermau5</a></figcaption>
+        </figure>
+        <figure class="card">
+          <img src="../../assets/MLB3.png" alt="YCH Mascot Long Boi example 3" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Emote commission for Mixy</figcaption>
         </figure>
       </div>
 
       <details style="margin-top:14px;">
         <summary>Terms for Illustration</summary>
         <ul>
-          <li>Personal use allowed; commercial/licensing by agreement.</li>
-          <li>Typical delivery ~1 month from start.</li>
-          <li>Revisions: sketch approval + 1 minor pass after color.</li>
+          <li>TOS holds from <a href="https://wolfpastrystudio.com/commissions/">Overview</a></li>
         </ul>
       </details>
     </div>
