--- a/commissions/assets/index.html
+++ b/commissions/assets/index.html
@@ -43,10 +43,13 @@
     <div>
       <h3>Stream Asset Commissions</h3>
       <ul class="pricing">
-        <li><strong>Bust Up:</strong> $25</li>
-        <li><strong>Half Body:</strong> $40</li>
-        <li><strong>Full Body:</strong> $50</li>
-        <li><em>Add-ons:</em> extra outfit +$10, detailed bg +$5, extra character +$10</li>
+        <li><strong>Twitch Sub Badges:</strong> $10</li>
+        <li><strong>Twitch Bit Badges:</strong> $10</li>
+        <li><strong>Twitch Channel Point Icons:</strong> $10</li>
+        <li><strong>Stream Panels:</strong> $15</li>
+        <li><strong>Stream Alerts:</strong> $20</li>
+        <li><strong>Custom Chat Overlay:</strong> $TBD</li>
+        <li><em>Add-ons:</em> badge flair(Only for Sub Badge) +$5</li>
       </ul>
 
       <div class="cta-group" style="margin-top:10px;">
@@ -54,20 +57,55 @@
         <a class="btn secondary" href="https://trello.com/b/S2ZR06cE/wolfs-commissions" target="_blank" rel="noopener">Queue</a>
       </div>
 
-      <h4 style="margin-top:20px;">Examples</h4>
+      <h4 style="margin-top:20px;">Twitch Sub Badge Examples</h4>
       <div class="grid gallery">
         <figure class="card">
-          <img src="../../assets/sample1.png" alt="Stream Assets example 1" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Stream Asset commission</figcaption>
+          <img src="../../assets/TSB1.png" alt="Twitch Sub Badge example 1" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Twitch Sub Badge personal commission</figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">Twitch Bit Badge Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <figcaption>Not Applicable Yet</figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">Twitch Channel Point Icon Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <img src="../../assets/favicon.ico" alt="Twitch Channel Point Icon example 1" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Twitch Channel Point Icon personal commission</figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">Stream Panel Examples</h4>
+      <div class="grid gallery">
+        <img src="../../assets/SP1.png" alt="SP example 1" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Stream Panel personal commission</figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">Stream Alert Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <img src="../../assets/SA1.png" alt="SA example 1" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Stream Alert personal commission</figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">Custom Chat Overlay Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <figcaption>Not Applicable Yet</figcaption>
         </figure>
       </div>
 
       <details style="margin-top:14px;">
         <summary>Terms for Stream Assets</summary>
         <ul>
-          <li>Personal use allowed; commercial/licensing by agreement.</li>
-          <li>Typical delivery ~1 month from start.</li>
-          <li>Revisions: sketch approval + 1 minor pass after color.</li>
+          <li>TOS holds from <a href="https://wolfpastrystudio.com/commissions/">Overview</a></li>
         </ul>
       </details>
     </div>
