--- a/commissions/assets/index.html
+++ b/commissions/assets/index.html
@@ -82,7 +82,8 @@
 
       <h4 style="margin-top:20px;">Stream Panel Examples</h4>
       <div class="grid gallery">
-        <img src="../../assets/SP1.png" alt="SP example 1" loading="lazy" onerror="this.style.display='none'">
+        <figure class="card">
+          <img src="../../assets/SP1.png" alt="SP example 1" loading="lazy" onerror="this.style.display='none'">
           <figcaption>Stream Panel personal commission</figcaption>
         </figure>
       </div>
@@ -90,7 +91,7 @@
       <h4 style="margin-top:20px;">Stream Alert Examples</h4>
       <div class="grid gallery">
         <figure class="card">
-          <img src="../../assets/SA1.png" alt="SA example 1" loading="lazy" onerror="this.style.display='none'">
+          <img src="../../assets/SA1.gif" alt="SA example 1" loading="lazy" onerror="this.style.display='none'">
           <figcaption>Stream Alert personal commission</figcaption>
         </figure>
       </div>
