--- a/commissions/miscellaneous/index.html
+++ b/commissions/miscellaneous/index.html
@@ -43,10 +43,11 @@
     <div>
       <h3>Other Services Commissions</h3>
       <ul class="pricing">
-        <li><strong>Bust Up:</strong> $25</li>
-        <li><strong>Half Body:</strong> $40</li>
-        <li><strong>Full Body:</strong> $50</li>
-        <li><em>Add-ons:</em> extra outfit +$10, detailed bg +$5, extra character +$10</li>
+        <li><strong>Minecraft Java Skin:</strong> $10+</li>
+        <p>Skin Base(Skin color and Eyes) - $10; Main Base(Skin Base + Hair and 1 outfit) - $15; Updated Base(Main Base + Additional Outfit and optional Additional Accessories) - $25</p>
+        <li><strong>Discord Server Making:</strong> $20</li>
+        <li><strong>VTuber Logo:</strong> $TBD</li>
+        <li><em>Add-ons:</em> extra outfit/hair options(Only for MC Skin) +$10 each</li>
       </ul>
 
       <div class="cta-group" style="margin-top:10px;">
@@ -54,20 +55,53 @@
         <a class="btn secondary" href="https://trello.com/b/S2ZR06cE/wolfs-commissions" target="_blank" rel="noopener">Queue</a>
       </div>
 
-      <h4 style="margin-top:20px;">Examples</h4>
+      <h4 style="margin-top:20px;">Minecraft Java Skin Examples</h4>
       <div class="grid gallery">
         <figure class="card">
-          <img src="../../assets/sample1.png" alt="Other example 1" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Other commission</figcaption>
+          <img src="../../assets/MC1.png" alt="Minecraft Java Skin example 1" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Minecraft Java Skin personal commission</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="../../assets/MC2.png" alt="Minecraft Java Skin example 2" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Minecraft Java Skin commission<a href="https://x.com/Felgrand_TV">FelgrandTheDragon</a></figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="../../assets/MC3.png" alt="Minecraft Java Skin example 3" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Minecraft Java Skin commission<a href="https://bsky.app/profile/soraorionokami.bsky.social">Sora Orion Okami</a></figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="../../assets/MC4.png" alt="Minecraft Java Skin example 4" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>Minecraft Java Skin commission<a href="https://bsky.app/profile/elddrasil.bsky.social">Eld Drasil</a></figcaption>
+        </figure>
+      </div>
+        
+      <h4 style="margin-top:20px;">Discord Server Making Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <figcaption>Not Applicable Yet</figcaption>
+        </figure>
+      </div>
+
+      <h4 style="margin-top:20px;">VTuber Logo Examples</h4>
+      <div class="grid gallery">
+        <figure class="card">
+          <img src="../../assets/logo.png" alt="VTuber Logo example 1" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>VTuber Logo personal commission</figcaption>
+        </figure>
+
+        <figure class="card">
+          <img src="../../assets/L1.png" alt="VTuber Logo example 2" loading="lazy" onerror="this.style.display='none'">
+          <figcaption>VTuber Logo commission for<a href="https://x.com/Felgrand_TV">FelgrandTheDragon</a></figcaption>
         </figure>
       </div>
 
       <details style="margin-top:14px;">
         <summary>Terms for Other Services</summary>
         <ul>
-          <li>Personal use allowed; commercial/licensing by agreement.</li>
-          <li>Typical delivery ~1 month from start.</li>
-          <li>Revisions: sketch approval + 1 minor pass after color.</li>
+          <li>TOS holds from <a href="https://wolfpastrystudio.com/commissions/">Overview</a></li>
         </ul>
       </details>
     </div>
